third_party/rust/chromium_crates_io/vendor/cxx-1.0.116/tests/ui/derive_noncopy.stderr
error[E0204]: the trait `std::marker::Copy` cannot be implemented for this type
 --> tests/ui/derive_noncopy.rs:4:12
  |
4 |     struct TryCopy {
  |            ^^^^^^^
5 |         other: Other,
  |         ------------ this field does not implement `std::marker::Copy`
